In libgpg-error, we added the spawn API.
For Windows, I did mistake to expose unused function of get_max_fds.
This may cause symbol duplication error when building gnupg with libgpg-error 1.50 (for static linking).
In libgpg-error, we added the spawn API.
For Windows, I did mistake to expose unused function of get_max_fds.
This may cause symbol duplication error when building gnupg with libgpg-error 1.50 (for static linking).
| rG GnuPG | |||
| rGc33523a0132e common:w32: Don't expose unused functions. | |||
| rG730593affa91 common:w32: Don't expose unused functions. | |||
libgpg-error fix is done in: rEc2a713fe11e3: w32:spawn: Remove unused function get_max_fds.
We need to fix gnupg24 and gnupg22, so that those can be build with libgpg-error 1.50.